2011-07-12	Ricardo Aguirre <el.mastin@ymail.com>

	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add psxtmmutex03.
	* psxtmmutex03/.cvsignore, psxtmmutex03/Makefile.am,
	psxtmmutex03/init.c, psxtmmutex03/psxtmmutex03.doc: New files.

2011-06-29	Ricardo Aguirre <el.mastin@ymail.com>

	* psxtmtests/Makefile.am, psxtmtests/configure.ac,
	psxtmtests/psxtmtests_plan.csv: Added nanosleep tests.
	* psxtmtests/psxtmnanosleep01/Makefile.am,
	psxtmtests/psxtmnanosleep01/init.c,
	psxtmtests/psxtmnanosleep01/psxtmnanosleep01.doc,
	psxtmtests/psxtmnanosleep02/Makefile.am,
	psxtmtests/psxtmnanosleep02/init.c,
	psxtmtests/psxtmnanosleep02/psxtmnanosleep02.doc,
	psxtmnanosleep01/.cvsignore, psxtmnanosleep02/.cvsignore: New files.

2011-06-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmtests_plan.csv: Complete plan for mutexes.

2011-06-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmtests_plan.csv: Update.

2011-06-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test case for sleep - blocking.
	* psxtmsleep02/.cvsignore, psxtmsleep02/Makefile.am,
	psxtmsleep02/init.c, psxtmsleep02/psxtmsleep02.doc: New files.

2011-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmsleep01/Makefile.in: Removed.

2011-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add psxtmsleep01.
	* psxtmsleep01/.cvsignore, psxtmsleep01/Makefile.am,
	psxtmsleep01/Makefile.in, psxtmsleep01/init.c,
	psxtmsleep01/psxtmsleep01.doc: New files.

2011-06-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmtests_plan.csv: Add sleep and nanosleep cases.

2011-04-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* README, psxtmtests_plan.csv: Add more possible test cases.

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add AC_CONFIG_HEADER(config.h).

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxtmmutex02/init.c, psxtmthread01/init.c, psxtmthread03/init.c:
	Add HAVE_CONFIG_H.
