@@ -1,3 +1,8 @@
+2011-07-12	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* psxtmnanosleep01/init.c, psxtmsleep01/init.c: Do not divide by
+	OPERATION_COUNT on single shot times.
+
 2011-07-12	Ricardo Aguirre <el.mastin@ymail.com>
 
 	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add psxtmmutex03.
